[package]
name = "include_bytes_aligned"
description = "A simple macro that embeds the bytes of an external file into the executable and guarantees that they are aligned."
version = "0.1.2"
edition = "2018"
homepage = "https://github.com/PonasKovas/include_bytes_aligned"
repository = "https://github.com/PonasKovas/include_bytes_aligned"
license = "MIT"
keywords = ["include_bytes", "aligned", "align", "bytes", "macro"]
categories = ["memory-management"]

[lib]
doctest = false